; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_btf.c_btf__free.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_btf.c_btf__free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btf = type { i32, %struct.btf*, %struct.btf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btf__free(%struct.btf* %0) #0 {
  %2 = alloca %struct.btf*, align 8
  store %struct.btf* %0, %struct.btf** %2, align 8
  %3 = load %struct.btf*, %struct.btf** %2, align 8
  %4 = icmp ne %struct.btf* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %27

6:                                                ; preds = %1
  %7 = load %struct.btf*, %struct.btf** %2, align 8
  %8 = getelementptr inbounds %struct.btf, %struct.btf* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load %struct.btf*, %struct.btf** %2, align 8
  %13 = getelementptr inbounds %struct.btf, %struct.btf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @close(i32 %14)
  br label %16

16:                                               ; preds = %11, %6
  %17 = load %struct.btf*, %struct.btf** %2, align 8
  %18 = getelementptr inbounds %struct.btf, %struct.btf* %17, i32 0, i32 2
  %19 = load %struct.btf*, %struct.btf** %18, align 8
  %20 = call i32 @free(%struct.btf* %19)
  %21 = load %struct.btf*, %struct.btf** %2, align 8
  %22 = getelementptr inbounds %struct.btf, %struct.btf* %21, i32 0, i32 1
  %23 = load %struct.btf*, %struct.btf** %22, align 8
  %24 = call i32 @free(%struct.btf* %23)
  %25 = load %struct.btf*, %struct.btf** %2, align 8
  %26 = call i32 @free(%struct.btf* %25)
  br label %27

27:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(%struct.btf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
